PL3/Fun/FunParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Fun.g 2012-11-30 05:12:03

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class FunParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROG", "VAR", "FORMAL", "NOFORMAL", "IFELSE", "SEQ", "PROCCALL", "FUNCCALL", "NOACTUAL", "PROC", "ID", "LPAR", "RPAR", "COLON", "DOT", "FUNC", "RETURN", "ASSN", "BOOL", "INT", "IF", "ELSE", "WHILE", "FOR", "TO", "EQ", "LT", "GT", "PLUS", "MINUS", "TIMES", "DIV", "FALSE", "TRUE", "NUM", "NOT", "DIGIT", "LETTER", "SPACE", "EOL", "COMMENT"
    };
    public static final int EOF=-1;
    public static final int PROG=4;
    public static final int VAR=5;
    public static final int FORMAL=6;
    public static final int NOFORMAL=7;
    public static final int IFELSE=8;
    public static final int SEQ=9;
    public static final int PROCCALL=10;
    public static final int FUNCCALL=11;
    public static final int NOACTUAL=12;
    public static final int PROC=13;
    public static final int ID=14;
    public static final int LPAR=15;
    public static final int RPAR=16;
    public static final int COLON=17;
    public static final int DOT=18;
    public static final int FUNC=19;
    public static final int RETURN=20;
    public static final int ASSN=21;
    public static final int BOOL=22;
    public static final int INT=23;
    public static final int IF=24;
    public static final int ELSE=25;
    public static final int WHILE=26;
    public static final int FOR=27;
    public static final int TO=28;
    public static final int EQ=29;
    public static final int LT=30;
    public static final int GT=31;
    public static final int PLUS=32;
    public static final int MINUS=33;
    public static final int TIMES=34;
    public static final int DIV=35;
    public static final int FALSE=36;
    public static final int TRUE=37;
    public static final int NUM=38;
    public static final int NOT=39;
    public static final int DIGIT=40;
    public static final int LETTER=41;
    public static final int SPACE=42;
    public static final int EOL=43;
    public static final int COMMENT=44;

    // delegates
    // delegators


        public FunParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FunParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FunParser.tokenNames; }
    public String getGrammarFileName() { return "Fun.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Fun.g:37:1: program : ( var_decl )* ( proc_decl )+ EOF -> ^( PROG ( var_decl )* ( proc_decl )+ ) ;
    public final FunParser.program_return program() throws RecognitionException {
        FunParser.program_return retval = new FunParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF3=null;
        FunParser.var_decl_return var_decl1 = null;

        FunParser.proc_decl_return proc_decl2 = null;


        CommonTree EOF3_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_proc_decl=new RewriteRuleSubtreeStream(adaptor,"rule proc_decl");
        RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");
        try {
            // Fun.g:38:2: ( ( var_decl )* ( proc_decl )+ EOF -> ^( PROG ( var_decl )* ( proc_decl )+ ) )
            // Fun.g:38:4: ( var_decl )* ( proc_decl )+ EOF
            {
            // Fun.g:38:4: ( var_decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=BOOL && LA1_0<=INT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Fun.g:38:4: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_program99);
            	    var_decl1=var_decl();

            	    state._fsp--;

            	    stream_var_decl.add(var_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // Fun.g:38:14: ( proc_decl )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==PROC||LA2_0==FUNC) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Fun.g:38:14: proc_decl
            	    {
            	    pushFollow(FOLLOW_proc_decl_in_program102);
            	    proc_decl2=proc_decl();

            	    state._fsp--;

            	    stream_proc_decl.add(proc_decl2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program105);  
            stream_EOF.add(EOF3);



            // AST REWRITE
            // elements: var_decl, proc_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 38:31: -> ^( PROG ( var_decl )* ( proc_decl )+ )
            {
                // Fun.g:38:34: ^( PROG ( var_decl )* ( proc_decl )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);

                // Fun.g:39:35: ( var_decl )*
                while ( stream_var_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_var_decl.nextTree());

                }
                stream_var_decl.reset();
                if ( !(stream_proc_decl.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_proc_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_proc_decl.nextTree());

                }
                stream_proc_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class proc_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "proc_decl"
    // Fun.g:46:1: proc_decl : ( PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT -> ^( PROC ID formal ( var_decl )* seq_com ) | FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT -> ^( FUNC type ID formal ( var_decl )* seq_com expr ) );
    public final FunParser.proc_decl_return proc_decl() throws RecognitionException {
        FunParser.proc_decl_return retval = new FunParser.proc_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROC4=null;
        Token ID5=null;
        Token LPAR6=null;
        Token RPAR8=null;
        Token COLON9=null;
        Token DOT12=null;
        Token FUNC13=null;
        Token ID15=null;
        Token LPAR16=null;
        Token RPAR18=null;
        Token COLON19=null;
        Token RETURN22=null;
        Token DOT24=null;
        FunParser.formal_return formal7 = null;

        FunParser.var_decl_return var_decl10 = null;

        FunParser.seq_com_return seq_com11 = null;

        FunParser.type_return type14 = null;

        FunParser.formal_return formal17 = null;

        FunParser.var_decl_return var_decl20 = null;

        FunParser.seq_com_return seq_com21 = null;

        FunParser.expr_return expr23 = null;


        CommonTree PROC4_tree=null;
        CommonTree ID5_tree=null;
        CommonTree LPAR6_tree=null;
        CommonTree RPAR8_tree=null;
        CommonTree COLON9_tree=null;
        CommonTree DOT12_tree=null;
        CommonTree FUNC13_tree=null;
        CommonTree ID15_tree=null;
        CommonTree LPAR16_tree=null;
        CommonTree RPAR18_tree=null;
        CommonTree COLON19_tree=null;
        CommonTree RETURN22_tree=null;
        CommonTree DOT24_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleTokenStream stream_FUNC=new RewriteRuleTokenStream(adaptor,"token FUNC");
        RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
        RewriteRuleTokenStream stream_PROC=new RewriteRuleTokenStream(adaptor,"token PROC");
        RewriteRuleSubtreeStream stream_formal=new RewriteRuleSubtreeStream(adaptor,"rule formal");
        RewriteRuleSubtreeStream stream_seq_com=new RewriteRuleSubtreeStream(adaptor,"rule seq_com");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");
        try {
            // Fun.g:47:2: ( PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT -> ^( PROC ID formal ( var_decl )* seq_com ) | FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT -> ^( FUNC type ID formal ( var_decl )* seq_com expr ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==PROC) ) {
                alt5=1;
            }
            else if ( (LA5_0==FUNC) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // Fun.g:47:4: PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT
                    {
                    PROC4=(Token)match(input,PROC,FOLLOW_PROC_in_proc_decl202);  
                    stream_PROC.add(PROC4);

                    ID5=(Token)match(input,ID,FOLLOW_ID_in_proc_decl204);  
                    stream_ID.add(ID5);

                    LPAR6=(Token)match(input,LPAR,FOLLOW_LPAR_in_proc_decl210);  
                    stream_LPAR.add(LPAR6);

                    pushFollow(FOLLOW_formal_in_proc_decl212);
                    formal7=formal();

                    state._fsp--;

                    stream_formal.add(formal7.getTree());
                    RPAR8=(Token)match(input,RPAR,FOLLOW_RPAR_in_proc_decl214);  
                    stream_RPAR.add(RPAR8);

                    COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_proc_decl216);  
                    stream_COLON.add(COLON9);

                    // Fun.g:49:5: ( var_decl )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( ((LA3_0>=BOOL && LA3_0<=INT)) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Fun.g:49:5: var_decl
                    	    {
                    	    pushFollow(FOLLOW_var_decl_in_proc_decl222);
                    	    var_decl10=var_decl();

                    	    state._fsp--;

                    	    stream_var_decl.add(var_decl10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    pushFollow(FOLLOW_seq_com_in_proc_decl225);
                    seq_com11=seq_com();

                    state._fsp--;

                    stream_seq_com.add(seq_com11.getTree());
                    DOT12=(Token)match(input,DOT,FOLLOW_DOT_in_proc_decl227);  
                    stream_DOT.add(DOT12);



                    // AST REWRITE
                    // elements: PROC, seq_com, ID, var_decl, formal
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 49:30: -> ^( PROC ID formal ( var_decl )* seq_com )
                    {
                        // Fun.g:49:33: ^( PROC ID formal ( var_decl )* seq_com )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_PROC.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_formal.nextTree());
                        // Fun.g:51:35: ( var_decl )*
                        while ( stream_var_decl.hasNext() ) {
                            adaptor.addChild(root_1, stream_var_decl.nextTree());

                        }
                        stream_var_decl.reset();
                        adaptor.addChild(root_1, stream_seq_com.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // Fun.g:52:4: FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT
                    {
                    FUNC13=(Token)match(input,FUNC,FOLLOW_FUNC_in_proc_decl319);  
                    stream_FUNC.add(FUNC13);

                    pushFollow(FOLLOW_type_in_proc_decl321);
                    type14=type();

                    state._fsp--;

                    stream_type.add(type14.getTree());
                    ID15=(Token)match(input,ID,FOLLOW_ID_in_proc_decl323);  
                    stream_ID.add(ID15);

                    LPAR16=(Token)match(input,LPAR,FOLLOW_LPAR_in_proc_decl329);  
                    stream_LPAR.add(LPAR16);

                    pushFollow(FOLLOW_formal_in_proc_decl331);
                    formal17=formal();

                    state._fsp--;

                    stream_formal.add(formal17.getTree());
                    RPAR18=(Token)match(input,RPAR,FOLLOW_RPAR_in_proc_decl333);  
                    stream_RPAR.add(RPAR18);

                    COLON19=(Token)match(input,COLON,FOLLOW_COLON_in_proc_decl335);  
                    stream_COLON.add(COLON19);

                    // Fun.g:54:5: ( var_decl )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( ((LA4_0>=BOOL && LA4_0<=INT)) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // Fun.g:54:5: var_decl
                    	    {
                    	    pushFollow(FOLLOW_var_decl_in_proc_decl341);
                    	    var_decl20=var_decl();

                    	    state._fsp--;

                    	    stream_var_decl.add(var_decl20.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    pushFollow(FOLLOW_seq_com_in_proc_decl344);
                    seq_com21=seq_com();

                    state._fsp--;

                    stream_seq_com.add(seq_com21.getTree());
                    RETURN22=(Token)match(input,RETURN,FOLLOW_RETURN_in_proc_decl350);  
                    stream_RETURN.add(RETURN22);

                    pushFollow(FOLLOW_expr_in_proc_decl352);
                    expr23=expr();

                    state._fsp--;

                    stream_expr.add(expr23.getTree());
                    DOT24=(Token)match(input,DOT,FOLLOW_DOT_in_proc_decl354);  
                    stream_DOT.add(DOT24);



                    // AST REWRITE
                    // elements: var_decl, seq_com, type, FUNC, expr, formal, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 55:30: -> ^( FUNC type ID formal ( var_decl )* seq_com expr )
                    {
                        // Fun.g:55:33: ^( FUNC type ID formal ( var_decl )* seq_com expr )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_FUNC.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_formal.nextTree());
                        // Fun.g:57:35: ( var_decl )*
                        while ( stream_var_decl.hasNext() ) {
                            adaptor.addChild(root_1, stream_var_decl.nextTree());

                        }
                        stream_var_decl.reset();
                        adaptor.addChild(root_1, stream_seq_com.nextTree());
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "proc_decl"

    public static class formal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formal"
    // Fun.g:61:1: formal : ( type ID -> ^( FORMAL type ID ) | -> NOFORMAL );
    public final FunParser.formal_return formal() throws RecognitionException {
        FunParser.formal_return retval = new FunParser.formal_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID26=null;
        FunParser.type_return type25 = null;


        CommonTree ID26_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // Fun.g:62:2: ( type ID -> ^( FORMAL type ID ) | -> NOFORMAL )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=BOOL && LA6_0<=INT)) ) {
                alt6=1;
            }
            else if ( (LA6_0==RPAR) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // Fun.g:62:4: type ID
                    {
                    pushFollow(FOLLOW_type_in_formal496);
                    type25=type();

                    state._fsp--;

                    stream_type.add(type25.getTree());
                    ID26=(Token)match(input,ID,FOLLOW_ID_in_formal498);  
                    stream_ID.add(ID26);



                    // AST REWRITE
                    // elements: type, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 62:31: -> ^( FORMAL type ID )
                    {
                        // Fun.g:62:34: ^( FORMAL type ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FORMAL, "FORMAL"), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // Fun.g:63:31: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 63:31: -> NOFORMAL
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(NOFORMAL, "NOFORMAL"));

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formal"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // Fun.g:66:1: var_decl : type ID ASSN expr -> ^( VAR type ID expr ) ;
    public final FunParser.var_decl_return var_decl() throws RecognitionException {
        FunParser.var_decl_return retval = new FunParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID28=null;
        Token ASSN29=null;
        FunParser.type_return type27 = null;

        FunParser.expr_return expr30 = null;


        CommonTree ID28_tree=null;
        CommonTree ASSN29_tree=null;
        RewriteRuleTokenStream stream_ASSN=new RewriteRuleTokenStream(adaptor,"token ASSN");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // Fun.g:67:2: ( type ID ASSN expr -> ^( VAR type ID expr ) )
            // Fun.g:67:4: type ID ASSN expr
            {
            pushFollow(FOLLOW_type_in_var_decl572);
            type27=type();

            state._fsp--;

            stream_type.add(type27.getTree());
            ID28=(Token)match(input,ID,FOLLOW_ID_in_var_decl574);  
            stream_ID.add(ID28);

            ASSN29=(Token)match(input,ASSN,FOLLOW_ASSN_in_var_decl576);  
            stream_ASSN.add(ASSN29);

            pushFollow(FOLLOW_expr_in_var_decl578);
            expr30=expr();

            state._fsp--;

            stream_expr.add(expr30.getTree());


            // AST REWRITE
            // elements: expr, ID, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 67:31: -> ^( VAR type ID expr )
            {
                // Fun.g:67:34: ^( VAR type ID expr )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR, "VAR"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_expr.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // Fun.g:70:1: type : ( BOOL -> BOOL | INT -> INT );
    public final FunParser.type_return type() throws RecognitionException {
        FunParser.type_return retval = new FunParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token BOOL31=null;
        Token INT32=null;

        CommonTree BOOL31_tree=null;
        CommonTree INT32_tree=null;
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_BOOL=new RewriteRuleTokenStream(adaptor,"token BOOL");

        try {
            // Fun.g:71:2: ( BOOL -> BOOL | INT -> INT )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==BOOL) ) {
                alt7=1;
            }
            else if ( (LA7_0==INT) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // Fun.g:71:4: BOOL
                    {
                    BOOL31=(Token)match(input,BOOL,FOLLOW_BOOL_in_type610);  
                    stream_BOOL.add(BOOL31);



                    // AST REWRITE
                    // elements: BOOL
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 71:31: -> BOOL
                    {
                        adaptor.addChild(root_0, stream_BOOL.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // Fun.g:72:4: INT
                    {
                    INT32=(Token)match(input,INT,FOLLOW_INT_in_type641);  
                    stream_INT.add(INT32);



                    // AST REWRITE
                    // elements: INT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 72:31: -> INT
                    {
                        adaptor.addChild(root_0, stream_INT.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class com_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "com"
    // Fun.g:78:1: com : ( ID ASSN expr -> ^( ASSN ID expr ) | ID LPAR actual RPAR -> ^( PROCCALL ID actual ) | IF expr COLON c1= seq_com ( DOT -> ^( IF expr $c1) | ELSE COLON c2= seq_com DOT -> ^( IFELSE expr $c1 $c2) ) | WHILE expr COLON seq_com DOT -> ^( WHILE expr seq_com ) | FOR ID ASSN e1= expr TO e2= expr COLON seq_com DOT -> ^( FOR ID $e1 $e2 seq_com ) );
    public final FunParser.com_return com() throws RecognitionException {
        FunParser.com_return retval = new FunParser.com_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;
